--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,4 @@
 
-
 body {
 	font-size: 14px;
 	color: black;
@@ -39,13 +38,13 @@ h4, h5{
 }
 
 .sidebar-wrapper {
-	width: 250px;
+	width: 260px;
 	height: 1500px;
 	position: sticky;	
 	bottom: 0;
 	left: 0;
 	background: #fff;
-	border-right: 0 solid #e4e4e4;
+	
 	z-index: 11; 
 	box-shadow: 0 .3rem .8rem rgba(0, 0, 0, .12);
 	transition: all .2s ease-out
@@ -102,14 +101,14 @@ h4, h5{
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	padding: 10px;
+	padding: 20px;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column
 }
 
-.sidebar-wrapper .metismenu li+li {
+/* .sidebar-wrapper .metismenu li+li {
 	margin-top: 5px
 }
 
@@ -119,7 +118,7 @@ h4, h5{
 
 .sidebar-wrapper .metismenu li:last-child {
 	margin-bottom: 5px
-}
+} */
 
 .sidebar-wrapper .metismenu>li {
 	display: -webkit-box;
@@ -138,18 +137,18 @@ h4, h5{
 	align-items: center;
 	justify-content: left;
 	padding: 8px 15px;
-	font-size: 15px;
-	color: #5f5f5f;
+	font-size: 10px;
+	color: #000000;
 	outline-width: 0;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	letter-spacing: .5px;
-	border: 1px solid #ffffff00;
+	
 	transition: all .3s ease-out
 }
 
 .sidebar-wrapper .metismenu a .parent-icon {
-	font-size: 24px;
+	font-size: 20px;
 	line-height: 1
 }
 
@@ -158,8 +157,8 @@ h4, h5{
 }
 
 .sidebar-wrapper .metismenu ul a {
-	padding: 6px 15px 6px 15px;
-	font-size: 15px;
+	/* padding: 6px 15px 6px 15px; */
+	font-size: 14px;
 	border: 0
 }
 
@@ -167,18 +166,18 @@ h4, h5{
 	margin-right: 10px
 }
 
-.sidebar-wrapper .metismenu ul {
+/* .sidebar-wrapper .metismenu ul {
 	border: 1px solid #ededed;
 	background: #fff
-}
+} */
 
-.sidebar-wrapper .metismenu ul ul a {
+/* .sidebar-wrapper .metismenu ul ul a {
 	padding: 8px 15px 8px 30px
-}
+} */
 
-.sidebar-wrapper .metismenu ul ul ul a {
+/* .sidebar-wrapper .metismenu ul ul ul a {
 	padding: 8px 15px 8px 45px
-}
+} */
 
 .sidebar-wrapper .metismenu .mm-active>a,
 .sidebar-wrapper .metismenu a:active,
